make Mail app work on mobile again, fix #457

--- a/css/mail.css
+++ b/css/mail.css
@@ -507,6 +507,10 @@
 	margin-bottom: 0;
 }
 
+#mail-message-close {
+	display: none;
+}
+
 .mail-message-body {
 	margin: 100px 10px 50px 30px;
 }
